--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Zinfinity</title>
+  <title>Website | Mobile App Development - Mumbai | Zinfinity Technologies</title>
+  
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="Keywords" content="mobile, website, development, angular, android, iOS, hardware, webapp, design, IT, technology, bootstrap, CSS, HTML, free" />
+  <meta name="Description" content="Zinfinity Technologies LLP - Websites development, Mobile Development, Hardware support and other digital services - Get quick to market solutions with customized UI/UX and well tested, bug free softwares today! Free consultation for your website." />
   <link rel="icon" type="image/x-icon" href="assets/img/fav/2.png">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
     crossorigin="anonymous">
@@ -16,7 +19,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" />
   <link rel="stylesheet" href="assets/css/style.css">
 
-  <title>Zinfinity</title>
+  
   <script>
       // When the user scrolls down 20px from the top of the document, show the button
       window.onscroll = function() {scrollFunction()};
